examples/type_system/failing/67_adt_multi_arity_nested_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E083: nested constructor coverage must hold per constructor field (multi-arity constructor).

data ResultI {
    OkI(Int),
    ErrI(Int),
}

data Wrap2 {
    Pair(ResultI, ResultI),
    Empty,
}

fn score(w: Wrap2) -> Int {
    match w {
        Pair(OkI(v), _) -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
